[package]
name = "tdxhost"
version = "0.1.0"
edition = "2021"
description = "cli tool for tdx"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
libc = "0.2.155"
msru = "0.2.0"

[build-dependencies]
clap = { version = "4.5.9", features = ["cargo", "derive"] }
clap_complete = "4.5.7"
clap_mangen = "0.2.22"
